[package]
name = "chgpf"
version = "0.1.0"
edition = "2021"
description = "A simple command-line tool to change Git profiles"
authors = ["Daniel Kulichkov <danchick03@gmail.com>"]
license = "MIT"
repository = "https://github.com/kulichkoff/chgpf"
keywords = ["git", "profile", "command-line"]
categories = ["command-line-utilities"]

[dependencies]
dirs = "5.0.1"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"

[dev-dependencies]
tempfile = "3"
