[package]
name = "chgpf"
version = "1.0.0"
edition = "2021"
description = "A simple command-line tool to change Git profiles"
authors = ["Daniel Kulichkov <danchick03@gmail.com>"]
license = "MIT"
repository = "https://github.com/kulichkoff/chgpf"
keywords = ["git", "profile", "command-line"]
categories = ["command-line-utilities"]

[profile.release]
lto = true
opt-level = "s"
panic = "abort"

[dependencies]
dirs = { version = "5.0.1", default-features = false }
env_logger = { version = "0.11.5", default-features = false }
log = { version = "0.4.22", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }

[dev-dependencies]
tempfile = "3"
